--- a/Style.css
+++ b/Style.css
@@ -15,10 +15,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px; 
-    linear-gradient(180deg, 
+    background: linear-gradient(180deg, 
     rgba(0,0,0,0.3) 0%, 
     rgba(0,0,0,0.8) 100%);
-    
 }
 .logo {
     cursor: pointer;
@@ -51,8 +50,6 @@ button {
                         background-repeat: no repeat;
                         background-position: top center;
                         height: 80vh;
-
-                        
 }
 .About {
     color: #DEB992;
@@ -94,5 +91,4 @@ button {
 .Footer-Heading a{
     text-decoration: none;
     color: #1BA098;
-    
-
+}
